<resources>
    <string name="app_name">ToDoApp</string>
    <string name="add_contentDiscription_floatButton">Add</string>
    <string name="empty_list">Empty list</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="add_note">Add note</string>
    <string name="enter_note_name">Enter note name</string>
</resources>